@@ -71,6 +71,7 @@ Adapter classes
 - Formats: OCI layouts, container tarball hints, compose/SBOM hints
 - Key reason codes:
   CONTAINER_ADAPTER_V1
+  CONTAINER_FORMAT_MISMATCH
   CONTAINER_OCI_LAYOUT
   CONTAINER_LAYOUT_INVALID
   CONTAINER_INDEX_INVALID
@@ -78,7 +79,7 @@ Adapter classes
   CONTAINER_SBOM_PRESENT
   CONTAINER_SBOM_INVALID
 - Route strictness:
-  explicit `--adapter container` fails closed when OCI `oci-layout` metadata or `index.json` is invalid, or when SBOM-named inputs are invalid JSON.
+  explicit `--adapter container` fails closed when OCI `oci-layout` metadata or `index.json` is invalid, when SBOM-named inputs are invalid JSON, and when explicit tar/compose inputs do not contain container/compose evidence.
 
 7) image
 - Formats: .iso, .vhd, .vhdx, .vmdk, .qcow2
